# analitik_lab

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/agents/: intake.py  proposal.py  supervisor.py
src/bot/: handlers.py  middleware.py
src/graphs/: main_graph.py
src/knowledge/: README.md  proposal_template.docx
src/knowledge/examples/: kp_index.json
src/knowledge/examples/requests/: Образец_Заявки_в_лабораторию_сентябрь_2025.docx
src/knowledge/prices/: ПРЕЙСКУРАНТ на 2026 год.docx
src/schemas/: state.py
src/tools/: knowledge_loader.py  pdf_generator.py
tests/: conftest.py  test_config.py  test_integration.py
tests/test_agents/: test_intake.py  test_proposal.py  test_supervisor.py
tests/test_bot/: test_handlers.py  test_middleware.py
tests/test_graphs/: test_main_graph.py
tests/test_schemas/: test_state.py
tests/test_tools/: test_knowledge_loader.py  test_pdf_generator.py
