[project]
name = "analitik-lab-bot"
version = "0.1.0"
description = "AI-агент Telegram-бот для Аналитик.Лаб — приём заявок, уточнение, формирование КП"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.26,<4",
    "langgraph>=1.1,<2",
    "langchain-gigachat>=0.5,<1",
    "langchain-core>=1.0,<2",
    "docxtpl>=0.18,<1",
    "aiohttp-socks>=0.10,<1",
    "python-docx>=1.1,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "loguru>=0.7,<1",
    "pdfplumber>=0.11,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short -q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
